--- a/sample-input.html
+++ b/sample-input.html
@@ -15,8 +15,7 @@
     <input type="button" onclick="resolveForm()" value="Get values from form">
 </form>
 
-
-<p id="result">This text will be replaced </p>
+<p id="result">Good: 0, Oops: 0</p>
 
 <script> 
 
