changed output text

--- a/author.html
+++ b/author.html
@@ -36,7 +36,7 @@ function checkAuthor (){
                 alert("Sorry!");
             }
             var resultElement = document.getElementById("result");
-            resultElement.innerHTML = "Good: " + good + ", Oops: " + oops; 
+            resultElement.innerHTML = "Correct: " + good + ", Incorrect: " + oops; 
     
     
 }
