--- a/author.html
+++ b/author.html
@@ -2,19 +2,26 @@
 <html>
  <head>
     <title>Author Entry</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
  </head>
 <body>
 <h1>Author entry by Harichaithanya kotapati</h1>
 <h2>Getting input</h2>
 
 <form>
+   <div class="col-md-6">
     <label for="form1_author">The hidden author name </label>
-    <input type ="password" id="form1_author" name="form1_author" min=10 max=50 step=2 value="Dickens"> <br>
-
+    <input type ="password" id="form1_author" name="form1_author" min=10 max=50 step=2 value="Dickens" class="form-control"> <br>
+</div>
+<div class="col-md-6">
     <label for="form1_guess">Guess the author</label> </label>
-    <input type ="text" id="form1_guess" name="form1_guess" autofocus> <br>
-
-    <input type="button" onclick="checkAuthor()" value="Check the guess">
+    <input type ="text" id="form1_guess" name="form1_guess" autofocus class="form-control"> <br>
+</div>
+    <input type="button" class="btn btn-primary" onclick="checkAuthor()" value="Check the guess">
 </form>
 
 <br>
@@ -31,13 +38,18 @@ function checkAuthor (){
                 alert("You got it right!");
             } else {
                 oops++;
-                alert("Sorry!");
+                if(oops>7){
+            document.getElementById("form1_guess").disabled=true;
+             alert("Sorry,ran out of guesses "); 
             }
+            alert("Sorry");
+        }
             var resultElement = document.getElementById("result");
             resultElement.innerHTML = "Correct: " + good + ", Incorrect: " + oops; 
     
     
 }
+
 
 
 </script>
