--- a/cruise.html
+++ b/cruise.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
  <title>Cruise Page</title>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
+ </head>
 <body>
 
 <h1>Harichaithanya kotapati goes on a cruise</h1>
@@ -21,7 +27,7 @@
             <input type="checkbox" id="checkbox3" value="false"> Pool Pass
         </label>
     </div>
-    <input type="button" value="Select a cruise" onclick="selectCruise()">
+    <input type="button" value="Select a cruise" onclick="selectCruise()" class="btn btn-primary">
 </form>
 <br>
 <br>
@@ -32,7 +38,7 @@
     <label for="price">Enter price
     <input type ="text" id="price" name="price"> <br>
     </label>
-    <input type="button" onclick="updateCruise()" value="Update the cruise">
+    <input type="button" onclick="updateCruise()" value="Update the cruise" class="btn btn-primary">
 </form>
 
 
