--- a/tips.html
+++ b/tips.html
@@ -2,6 +2,10 @@
 <html>
  <head>
     <title>Tip Calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
  </head>
 <body>
 
@@ -9,14 +13,14 @@
 
 <!--Base amount is intialized with 50-->
 <label for="baseAmount">Enter base amount:</label>
-<input type="number" id="baseAmount" value="50">
+<input type="number" id="baseAmount" value="50" class="form-control-sm">
 
 <!--Tip percentage is default intialized with 15-->
 <label for="tipPercentage">Enter the tip percent:</label>
-<input type="number" id="tipPercentage" value="15">
+<input type="number" id="tipPercentage" value="15" class="form-control-sm">
 
 <!--Button element to call the claculateTips() function-->
-<input type="button" value="Show tip" onclick="tips()">
+<input type="button" value="Show tip" onclick="tips()" class="btn btn-primary">
 
 <!-- Div Element to display the calculated tips -->
 <div id="tipResults"></div>
